# programming_robots_with_ros

./: .gitignore  README.md
catkin_ws/src/chap_15/: CMakeLists.txt  package.xml
catkin_ws/src/chap_15/action/: Rotation.action
catkin_ws/src/chap_15/scripts/: actuator.py  fake_actuator.py  fake_sensor.py  service_light_client.py  service_sensor.py
catkin_ws/src/chap_15/srv/: FakeSensor.srv
catkin_ws/src/chap_19/: CMakeLists.txt  package.xml
catkin_ws/src/chap_19/action/: Talk.action
catkin_ws/src/chap_19/scripts/: pyttsx_client.py  pyttsx_example.py  pyttsx_server.py
catkin_ws/src/chap_3/: package.xml
catkin_ws/src/chap_3/scripts/3_5_message_publisher_subscriber/: README
catkin_ws/src/chap_4/scripts/: service_client.py
catkin_ws/src/chap_5/scripts/: fancy_action_client.py  simple_action_client.py  simple_action_server.py
chessbot/src/: chess_board.sdf  chess_piece.sdf  r2.bash  r2_chess.pgn  r2_chess_pgn.py  r2_chessboard_cli.py  r2_cli.py  r2_hand.py  r2_mime.py  spawn_chessboard.py
code/navigation/: patrol.py
code/patrol/: better_patrol_fsm.py  patrol.py  patrol_fsm.py  shapes.py  shapes2.py  simple_fsm.py
code/stuff/: service_sensor.py  topic_sensor.py  topic_sensor2.py  topic_sensor3.py
code/stuff/srv/: FakeSensor.srv
cougarbot_ws/src/cougarbot/: CMakeLists.txt  cougarbot.launch  cougarbot.urdf  package.xml
cougarbot_ws/src/cougarbot_moveit_config/: .setup_assistant  package.xml
cougarbot_ws/src/cougarbot_moveit_config/launch/: all.launch  cougarbot_moveit_controller_manager.launch.xml  demo.launch
followbot_ws/src/followbot/: CMakeLists.txt  follower.py  follower_color_filter.py  follower_line_finder.py  follower_opencv.py  follower_p.py  package.xml
src/chap_3/: CMakeLists.txt  package.xml
src/chap_3/scripts/: README  topic_subscriber.py
src/chap_3/scripts/3_1_publisher_subscriber/: topic_subscriber.py
src/chap_3/scripts/3_1_topic_publisher_subscriber/: 3_1_publisher_subscriber.launch  README  topic_publisher.py
src/chap_3/scripts/3_5_message_publisher_subscriber/: 3_5_publisher_subscriber.launch  message_publisher.py  message_subscriber.py
src/chap_3/scripts/3_7_double/: double.py
src/chap_4/: CMakeLists.txt  package.xml
src/chap_4/scripts/: service_server.py  service_server_client.launch
src/chap_5/: CMakeLists.txt  package.xml
src/chap_5/action/: Timer.action
src/chap_5/scripts/: fancy_action_server.py
stockroom_ws/src/stockroom_bot/: CMakeLists.txt  deliver_to_counter.py  go_to_bin.py  initial_localization.py  look_at_bin.py  markers.launch  nav.launch  package.xml  pick_up_item.py  stock_products.py
stockroom_ws/src/stockroom_bot/worlds/: aisle.world  aisle.world.em  gen.sh  stockroom.launch
tortoisebot_ws/src/mapping/: package.xml
tortoisebot_ws/src/tortoisebot/: CMakeLists.txt  package.xml  tortoisebot.launch  tortoisebot.rviz  tortoisebot.urdf
tortoisebot_ws/src/tortoisebot/config/: costmap_common_params.yaml
wanderbot_ws/src/wanderbot/: CMakeLists.txt  package.xml
wanderbot_ws/src/wanderbot/scripts/: red_light_green_light.py  wander.py
wanderbot_ws/src/wanderbot/scripts/chap_8/: key_publisher.py  keys_to_twist.py  keys_to_twist_parameterized.py  keys_to_twist_using_rate.py  keys_to_twist_with_ramps.py
